--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "url": "https://github.com/microsoft/codespaces-teaching-template-js/issues"
   },
   "dependencies": {
-    "react": "^18.2.0",
+    "react": 
+    "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
